taskmgt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmgt
  namespace: taskmgt
spec:
  ingressClassName: traefik
  rules:
    - host: tasks.k8s.ecafe.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
