taskmgt/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmgt-ts
  namespace: taskmgt
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  tls:
    - hosts:
        - taskmgt
